Use compact object headers for JVMs with Java 25-ea